# ucp-sovereign-middleware

./: Dockerfile  LICENSE  Makefile  README.md  audit_bunker.sh  deploy.sh  pyproject.toml
docs/adr/: 001-policy-enforcement-strategy.md  002-performance-vs-precision.md
src/adapters/: ucp_firewall.py
src/adapters/cloud/: aws_billing.py
src/core/: performance.py  policy.py
src/domain/: models.py
src/ports/: billing_provider.py
tests/integration/: test_merciless_audit.py  test_sren_compliance.py
tests/stress/: test_armageddon.py  test_network_chaos.py
