[tool.poetry]
name = "ucp-sovereign-middleware"
version = "0.1.0"
description = "SREN-Compliant Middleware for UCP Agents (Ref: NOR:ECOI2530768A)"
authors = ["Armand-Pierre Fege <https://www.linkedin.com/in/armand-pierre-fege>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
boto3 = "^1.42.29"
requests = "^2.32.5"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^25.12.0"
mypy = "^1.19.1"
ruff = "^0.14.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
