[tool.poetry]
name = "ucp-sovereign-middleware"
version = "2026.1.10"
description = "Deterministic SREN Enforcement Engine for UCP Agents"
authors = ["Armand-Pierre Fege <https://www.linkedin.com/in/armand-pierre-fege>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
asyncio = "1.3.0"
anyio = "4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
bandit = "1.8.2"
safety = "3.2.11"
black = "24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
