[tool.poetry]
name = "ucp-sovereign-middleware"
version = "0.1.0"
description = "SREN-compliant middleware for data sovereignty and egress cost enforcement."
authors = ["Armand-Pierre Fege <https://www.linkedin.com/in/armand-pierre-fege>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# Note: decimal and asyncio are built-in (standard library)

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
anyio = "^4.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
